# moyo

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .rumdl.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  deny.toml  justfile  release.toml  typos.toml
.github/: CODEOWNERS  filters.yaml  labeler.yaml  release.yaml  renovate.json  renovate.json5
apps/landing/: pyproject.toml  zensical.toml
apps/landing/docs/: index.md  standardization.md
apps/landing/docs/stylesheets/: extra.css
bench/: get_mp.py  mp.py  pyproject.toml  requirements.txt
bench/2d/: analyze.py  get_2d.py  layer.py
bench/mp/: analysis.ipynb  mp.py
docs/: layer_architecture.md  memo.typ
moyo/: Cargo.toml  README.md
moyo-wasm/: Cargo.toml  README.md  docs-entry.d.ts  package.json  typedoc.json  vitest.config.ts  zensical.toml
moyo-wasm/docs/: api.md
moyo-wasm/docs/stylesheets/: extra.css
moyo-wasm/src/: common.rs  dataset.rs  layer_group.rs  lib.rs  magnetic.rs  space_group.rs
moyo-wasm/tests/: analyze_cell.test.ts  data.test.ts  layer.test.ts  magnetic.test.ts  setup.ts
moyo/benches/: dataset.rs  translation_search.rs
moyo/src/: base.rs  data.rs  identify.rs  lib.rs  math.rs  search.rs  symmetrize.rs
moyo/src/base/: action.rs  cell.rs  error.rs  lattice.rs  lattice_2d.rs  layer.rs  layer_cell.rs  layer_lattice.rs  magnetic_cell.rs  operation.rs  permutation.rs  tolerance.rs  transformation.rs
moyo/src/base/layer/: lattice_2d.rs  layer_cell.rs  layer_lattice.rs
moyo/src/data/: arithmetic_crystal_class.rs  centering.rs  classification.rs  hall_symbol.rs  hall_symbol_database.rs  layer.rs  layer_arithmetic_crystal_class.rs  layer_classification.rs  layer_hall_symbol_database.rs  layer_point_group.rs  layer_setting.rs  layer_wyckoff.rs  magnetic.rs  magnetic_hall_symbol_database.rs  magnetic_space_group.rs  operations.rs  point_group.rs  setting.rs  wyckoff.rs
moyo/src/data/layer/: layer_arithmetic_crystal_class.rs  layer_centering.rs  layer_classification.rs  layer_point_group.rs  layer_wyckoff.rs
moyo/src/data/magnetic/: magnetic_hall_symbol_database.rs  magnetic_space_group.rs
moyo/src/identify/: layer.rs  layer_group.rs  layer_point_group.rs  layer_space_group.rs  magnetic_space_group.rs  normalizer.rs  point_group.rs  rotation_type.rs  space_group.rs
moyo/src/identify/layer/: layer_group.rs  layer_point_group.rs  normalizer.rs
moyo/src/math/: cycle_checker.rs  delaunay.rs  elementary.rs  hnf.rs  integer_system.rs  minkowski.rs  niggli.rs  snf.rs
moyo/src/search/: layer.rs  layer_bravais_group.rs  layer_primitive_cell.rs  layer_symmetry_search.rs  primitive_cell.rs  primitive_symmetry_search.rs  solve.rs  symmetry_search.rs
moyo/src/search/layer/: layer_primitive_cell.rs  layer_symmetry_search.rs
moyo/src/symmetrize/: layer_standardize.rs  magnetic_standardize.rs  standardize.rs
moyo/tests/: test_layer_dataset.rs  test_layer_symmetry.rs  test_moyo_dataset.rs  test_moyo_magnetic_dataset.rs
moyo/tests/assets/: AB_mC8_15_e_a.json  issue206.json  mp-1185639.json  mp-1197586.json  mp-1201492.json  mp-1221598.json  mp-1277787.json  mp-30665.json  mp-550745.json  mp-569901.json  pyrochlore.json  wbm-1-29497.json  wbm-1-42389.json  wbm-1-42433.json  wyckoff_edge_case.json
moyo_py/: Cargo.toml  pyproject.toml
moyo_py/python/moyo/: __init__.py  _moyo.pyi
moyo_py/python/tests/: conftest.py  test_all.py  test_moyo_dataset.py
moyo_py/src/: base.rs  data.rs  lib.rs
moyoc/: .pre-commit-config.yaml  CMakeLists.txt  Cargo.toml  Doxyfile  Makefile  README.md  cbindgen.toml  ford.md  zensical.toml
moyoc/docs/: api.md  api_fortran.md  migration.md
moyoc/docs/stylesheets/: extra.css
moyoc/examples/: CMakeLists.txt  README.md  example.c
moyoc/fortran/: CMakeLists.txt  moyof.f90
moyoc/fortran/tests/: test_moyof_dataset.f90
moyoc/src/: base.rs  data.rs  dataset.rs  identify.rs  lib.rs
moyoc/src/base/: cell.rs  magnetic_cell.rs  magnetic_operation.rs  operation.rs
moyoc/src/data/: group_type.rs  hall_symbol.rs  layer_setting.rs  magnetic_space_group_type.rs  operations.rs  setting.rs
moyoc/src/dataset/: layer_group.rs  magnetic_space_group.rs  space_group.rs
moyoc/src/identify/: layer_group.rs  magnetic_space_group.rs  point_group.rs  space_group.rs
moyoc/tests/: CMakeLists.txt  test_moyoc_data_entries.c  test_moyoc_dataset.c  test_moyoc_identify.c  test_moyoc_layer_dataset.c  test_moyoc_magnetic_dataset.c  test_moyoc_operations.c
moyopy/: .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml  zensical.toml
moyopy/docs/: api.md  api_layer_group.md  api_magnetic_space_group.md  conf.py  index.md  layer_standardization.md  migration.md  standardization.md
moyopy/docs/examples/: index.md
moyopy/docs/stylesheets/: extra.css
moyopy/examples/: basic.py  hm_to_number.py  layer_group.py  pymatgen_structure.py  requirements.txt  space_group_type.py
moyopy/python/moyopy/: __init__.py  _base.pyi  _data.pyi  _dataset.pyi  _identify.pyi  _moyopy.pyi  interface.py
moyopy/python/tests/: conftest.py  test_cell.py  test_hall_symbol_entry.py  test_identify.py  test_interface.py  test_moyo_dataset.py  test_moyo_layer_dataset.py  test_space_group_type.py  test_symmetry_data.py
moyopy/python/tests/data/: test_arithmetic_crystal_class.py  test_layer_arithmetic_crystal_class.py  test_layer_group_type.py  test_layer_hall_symbol_entry.py  test_magnetic_space_group_type.py  test_symmetry_data.py
moyopy/src/: base.rs  data.rs  dataset.rs  identify.rs  lib.rs  utils.rs
moyopy/src/base/: cell.rs  error.rs  magnetic_cell.rs  operation.rs
moyopy/src/data/: arithmetic_crystal_class.rs  centering.rs  hall_symbol.rs  layer_arithmetic_crystal_class.rs  layer_centering.rs  layer_group_type.rs  layer_hall_symbol.rs  layer_setting.rs  magnetic_space_group_type.rs  setting.rs  space_group_type.rs  wyckoff.rs
moyopy/src/dataset/: layer_group.rs  magnetic_space_group.rs  space_group.rs
python/: .buildinfo  api.html  api_layer_group.html  api_magnetic_space_group.html  genindex.html  index.html  layer_standardization.html  objects.inv  (+5 more)
(+169 files in other folders)
