[workspace]

members = [
    "moyo",
    "moyo-wasm",
    "moyopy",
    "moyoc",
]

resolver = "2"

[workspace.package]
authors = ["Kohei Shinohara <kshinohara0508@gmail.com>"]
description = "Library for Crystal Symmetry in Rust"
edition = "2024"
version = "0.7.6"
license = "MIT OR Apache-2.0"
repository = "https://github.com/spglib/moyo"

[workspace.dependencies]
nalgebra = { version = "0.34", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
approx = "0.5"
log = { version = "0.4", features = ["release_max_level_debug"] }
itertools = "0.14"

[workspace.metadata.release]
allow-branch = ["main"]
shared-version = true
tag-prefix = ""
tag = false

[profile.test]
opt-level = 1
