[package]
name = "moyo"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.release]
tag = true

[lib]
name = "moyo"

[dependencies]
nalgebra.workspace = true
serde.workspace = true
serde_json.workspace = true
approx.workspace = true
itertools = "0.11.0"
thiserror = "1.0"
union-find = "0.4.2"
strum = "0.25"
strum_macros = "0.25"
kiddo = "4.2.0"
# Disable trace level logs in release build
log = { version = "0.4", features = ["release_max_level_debug"] }

[dev-dependencies]
rand = "0.8.5"
rstest = "0.18.2"
criterion = { version = "0.4", features = ["html_reports"] }
env_logger = "0.11.3"
test-log = "0.2.15"

[[bench]]
name = "translation_search"
path = "benches/translation_search.rs"
harness = false

[[bench]]
name = "dataset"
path = "benches/dataset.rs"
harness = false
