[package]
name = "moyo"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.release]
tag = true

[lib]
name = "moyo"

[dependencies]
nalgebra.workspace = true
serde.workspace = true
serde_json.workspace = true
approx.workspace = true
log.workspace = true
itertools = "0.14"
thiserror = "2.0"
union-find = "0.4"
strum = "0.27"
strum_macros = "0.27"
kiddo = "5.0.3"
once_cell = "1.21.3"

[dev-dependencies]
rand = "0.9"
rstest = "0.25"
criterion = { version = "0.5", features = ["html_reports"] }
env_logger = "0.11"
test-log = "0.2"

[[bench]]
name = "translation_search"
path = "benches/translation_search.rs"
harness = false

[[bench]]
name = "dataset"
path = "benches/dataset.rs"
harness = false
