[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "moyo"
requires-python = ">=3.8"
description = "Python binding of Moyo"
license-files = { paths = ["LICENSE-MIT", "LICENSE-APACHE"] }

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.maturin]
python-source = "python"
module-name = "moyo._moyo"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
