[package]
name = "moyoc"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.release]
release = false

[lib]
name = "moyoc"
crate-type = ["cdylib"]

[dependencies]
moyo = { path = "../moyo", version = "0.7.2" }
nalgebra.workspace = true
serde.workspace = true
serde_json.workspace = true
approx.workspace = true
log.workspace = true
