[package]
name = "moyoc"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
publish = false

[package.metadata.release]
release = false

[lib]
name = "moyoc"
crate-type = ["staticlib", "cdylib"]

[dependencies]
moyo = { path = "../moyo", version = "0.12.0" }

[dev-dependencies]
nalgebra.workspace = true
approx.workspace = true
