[package]
name = "moyopy"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.release]
release = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "moyopy"
crate-type = ["cdylib"]

[dependencies]
moyo = { path = "../moyo", version = "0.7.4" }
nalgebra.workspace = true
serde.workspace = true
serde_json.workspace = true
approx.workspace = true
log.workspace = true
itertools.workspace = true
pyo3-log = "0.13"
pythonize = "0.27"


[dependencies.pyo3]
version = "0.27"
features = ["abi3-py39"]
